[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
authors  = [
    {name = "Will Fatherley", email = "wfatherley@proton.me"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
description = "HMAC-base key derivation function (IETF RFC 5869) implemented with Python"
dynamic = [
    "version"
]
license = {file = "LICENSE.md"}
maintainers = [
    {name = "Will Fatherley", email = "wfatherley@proton.me"}
]
name = "hkdfref"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"


[project.urls]
repository = "https://github.com/wfatherley/hkdfref.git"


[tool.setuptools.packages.find]
where = ["src"]
include = ["hkdfref"]

[tool.setuptools_scm]
